[gd_scene load_steps=9 format=3 uid="uid://d0qu5s3cpvb1w"]

[ext_resource type="Script" uid="uid://cv12lvgmcvp4b" path="res://Plot/inner_plot.gd" id="1_iv7n1"]
[ext_resource type="Script" uid="uid://dx8rw4stle5q0" path="res://Plot/line_chart.gd" id="1_mtoxi"]
[ext_resource type="Theme" uid="uid://pmfhiucv8n2o" path="res://Assets/Themes/Chart.tres" id="1_u4qrr"]
[ext_resource type="Script" uid="uid://bqnul1mt1s3ur" path="res://Plot/x_grid.gd" id="2_48y3q"]
[ext_resource type="Script" uid="uid://b04yx4x4yebv6" path="res://Plot/y_grid.gd" id="3_p2hl4"]
[ext_resource type="Script" uid="uid://c6qip18qwdy02" path="res://visualisation of inputs/button.gd" id="4_aglfa"]
[ext_resource type="Script" uid="uid://dvmjfg4eeudmi" path="res://Plot/Labels/label_container.gd" id="6_4vejy"]
[ext_resource type="PackedScene" uid="uid://detmflvrt1g70" path="res://Plot/Labels/dataset_label.tscn" id="7_6lwvq"]

[node name="LineChart" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.332881, 0.332881, 0.332881, 1)
script = ExtResource("1_mtoxi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 25

[node name="ChartContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/ChartContainer"]
layout_mode = 2

[node name="TitleLabel" type="RichTextLabel" parent="MarginContainer/ChartContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_u4qrr")
bbcode_enabled = true
text = "[wave]https://github.com/turboseb/chromatography"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="YChartContainer" type="BoxContainer" parent="MarginContainer/ChartContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="YAxis" type="BoxContainer" parent="MarginContainer/ChartContainer/YChartContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="MarginNode" type="Control" parent="MarginContainer/ChartContainer/YChartContainer/YAxis"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelRotaitonNode" type="Control" parent="MarginContainer/ChartContainer/YChartContainer/YAxis/MarginNode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708

[node name="YAxisLabel" type="Label" parent="MarginContainer/ChartContainer/YChartContainer/YAxis/MarginNode/LabelRotaitonNode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -11.5
offset_right = 22.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00331)
theme = ExtResource("1_u4qrr")
text = "Y axis"

[node name="XChartContainer" type="BoxContainer" parent="MarginContainer/ChartContainer/YChartContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1
vertical = true

[node name="Grid" type="ColorRect" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="PlotMargin" type="MarginContainer" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 40

[node name="PlotContainer" type="Control" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Plot" type="ColorRect" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer" node_paths=PackedStringArray("line_chart", "plot_container", "x_grid", "y_grid")]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
offset_top = 2000.0
offset_right = 2000.0
offset_bottom = 4000.0
scale = Vector2(1, -1)
size_flags_vertical = 3
color = Color(0.305882, 0.305882, 0.305882, 0)
script = ExtResource("1_iv7n1")
line_width = -1.0
line_chart = NodePath("../../../../../../../..")
plot_container = NodePath("..")
x_grid = NodePath("../../../XMargin/Control/XGrid")
y_grid = NodePath("../../../YMargin/Control/YGrid")
zoom_step = 0.1
scroll_step = 5.0

[node name="PlotBackground" type="ColorRect" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer/Plot"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.412152, 0.412152, 0.412152, 1)

[node name="XMargin" type="MarginContainer" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 50

[node name="Control" type="Control" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/XMargin"]
clip_contents = true
layout_mode = 2
mouse_filter = 2

[node name="XGrid" type="ColorRect" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/XMargin/Control" node_paths=PackedStringArray("plot")]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
script = ExtResource("2_48y3q")
plot = NodePath("../../../PlotMargin/PlotContainer/Plot")
tick_step = 1.0
grid_color = Color(0, 0, 0, 0.635294)
text_margin = 30
chart_theme = ExtResource("1_u4qrr")

[node name="YMargin" type="MarginContainer" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 37

[node name="Control" type="Control" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/YMargin"]
clip_contents = true
layout_mode = 2
mouse_filter = 2

[node name="YGrid" type="ColorRect" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/YMargin/Control" node_paths=PackedStringArray("plot")]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
script = ExtResource("3_p2hl4")
plot = NodePath("../../../PlotMargin/PlotContainer/Plot")
tick_step = 1000.0
grid_color = Color(0, 0, 0, 0.635294)
text_margin = 40
chart_theme = ExtResource("1_u4qrr")

[node name="XAxis" type="BoxContainer" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
alignment = 1
vertical = true

[node name="XAxisLabel" type="Label" parent="MarginContainer/ChartContainer/YChartContainer/XChartContainer/XAxis"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_u4qrr")
text = "X axis
"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ChartContainer/YChartContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 5

[node name="LabelContainer" type="ColorRect" parent="MarginContainer/ChartContainer/YChartContainer/MarginContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
color = Color(0.151276, 0.151276, 0.151276, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ChartContainer/YChartContainer/MarginContainer" node_paths=PackedStringArray("line_chart", "box_container")]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("6_4vejy")
line_chart = NodePath("../../../../..")
box_container = NodePath("BoxContainer")
dataset_label = ExtResource("7_6lwvq")

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/ChartContainer/YChartContainer/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
vertical = true

[node name="RichTextLabel" parent="MarginContainer/ChartContainer/YChartContainer/MarginContainer/MarginContainer/BoxContainer" instance=ExtResource("7_6lwvq")]
layout_mode = 2
text = "a"

[node name="RichTextLabel2" parent="MarginContainer/ChartContainer/YChartContainer/MarginContainer/MarginContainer/BoxContainer" instance=ExtResource("7_6lwvq")]
layout_mode = 2
text = "s"

[node name="RichTextLabel3" parent="MarginContainer/ChartContainer/YChartContainer/MarginContainer/MarginContainer/BoxContainer" instance=ExtResource("7_6lwvq")]
layout_mode = 2

[node name="RichTextLabel4" parent="MarginContainer/ChartContainer/YChartContainer/MarginContainer/MarginContainer/BoxContainer" instance=ExtResource("7_6lwvq")]
layout_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="BoxContainer" type="BoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -118.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Button3" type="Button" parent="Control/BoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
button_mask = 0
text = "Shift"
script = ExtResource("4_aglfa")
input_name = "shift"

[node name="Button" type="Button" parent="Control/BoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
button_mask = 0
text = "Ctrl"
script = ExtResource("4_aglfa")
input_name = "control"

[node name="Button2" type="Button" parent="Control/BoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
button_mask = 0
text = "Alt"
script = ExtResource("4_aglfa")
input_name = "alt"

[connection signal="resized" from="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer" to="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer/Plot" method="plot_container_resized"]
[connection signal="resized" from="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer" to="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/XMargin/Control/XGrid" method="_on_plot_container_resized"]
[connection signal="resized" from="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer" to="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/YMargin/Control/YGrid" method="_on_plot_container_resized"]
[connection signal="gui_input" from="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer/Plot" to="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer/Plot" method="_on_gui_input"]
[connection signal="item_rect_changed" from="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer/Plot" to="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/XMargin/Control/XGrid" method="_on_plot_item_rect_changed"]
[connection signal="item_rect_changed" from="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/PlotMargin/PlotContainer/Plot" to="MarginContainer/ChartContainer/YChartContainer/XChartContainer/Grid/YMargin/Control/YGrid" method="_on_plot_item_rect_changed"]
